--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,6 @@ header::before,
 header::after {
     content: '';
     position: absolute;
-    width: 100px;
-    height: 100px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -77,13 +75,18 @@ header::after {
 }
 
 header::before {
-    background-image: url('nick1.png');
+    background-image: url('nick2.png');
+    width: 210px;
+    height: 210px;
     left: 30px;
 }
 
 header::after {
     background-image: url('nick2.png');
+    width: 210px;
+    height: 210px;
     right: 30px;
+    transform: translateY(-50%) scaleX(-1);
 }
 
 header h1 {
@@ -701,18 +704,17 @@ header h1 {
         margin-bottom: 20px;
     }
     
-    header::before,
-    header::after {
-        width: 60px;
-        height: 60px;
-    }
-    
     header::before {
-        left: 10px;
+        width: 85px;
+        height: 85px;
+        left: 5px;
     }
     
     header::after {
-        right: 10px;
+        width: 85px;
+        height: 85px;
+        right: 5px;
+        transform: translateY(-50%) scaleX(-1);
     }
     
     header h1 {
